--- a/Shared/ChatApp.Models/ChatApp.Models.csproj
+++ b/Shared/ChatApp.Models/ChatApp.Models.csproj
@@ -10,4 +10,9 @@
     <Folder Include="Commands\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
