--- a/Services/ChatApp.AuthAPI/ChatApp.AuthAPI.csproj
+++ b/Services/ChatApp.AuthAPI/ChatApp.AuthAPI.csproj
@@ -7,7 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Business\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\ChatApp.Database\ChatApp.Database.csproj" />
+    <ProjectReference Include="..\..\Shared\ChatApp.Utils\ChatApp.Utils.csproj" />
   </ItemGroup>
 
 </Project>
