--- a/Services/ChatApp.MobileAPI/ChatApp.MobileAPI.csproj
+++ b/Services/ChatApp.MobileAPI/ChatApp.MobileAPI.csproj
@@ -7,7 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\ChatApp.Database\ChatApp.Database.csproj" />
+    <ProjectReference Include="..\..\Shared\ChatApp.Models\ChatApp.Models.csproj" />
+    <ProjectReference Include="..\..\Shared\ChatApp.Utils\ChatApp.Utils.csproj" />
   </ItemGroup>
 
 </Project>
