--- a/Services/ChatApp.SignalR/ChatApp.SignalR.csproj
+++ b/Services/ChatApp.SignalR/ChatApp.SignalR.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\ChatApp.Models\ChatApp.Models.csproj" />
+  </ItemGroup>
+
 </Project>
