--- a/Services/ChatApp.AuthAPI/appsettings.json
+++ b/Services/ChatApp.AuthAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "defaultconnection": "Server=DESKTOP-EH0CS0L;Database=messageDb;Integrated Security=True;TrustServerCertificate=True;"
+    "defaultconnection": "Server=DESKTOP-EH0CS0L;Database=userDb;Integrated Security=True;TrustServerCertificate=True;"
 
   },
   "Jwt": {
