--- a/Services/ChatApp.MobileAPI/ChatApp.MobileAPI.csproj
+++ b/Services/ChatApp.MobileAPI/ChatApp.MobileAPI.csproj
@@ -11,11 +11,19 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.5" />
     <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Shared\ChatApp.Database\ChatApp.Database.csproj" />
     <ProjectReference Include="..\..\Shared\ChatApp.Models\ChatApp.Models.csproj" />
     <ProjectReference Include="..\..\Shared\ChatApp.Utils\ChatApp.Utils.csproj" />
   </ItemGroup>
