--- a/Gateway/ChatApp.Gateway/ChatApp.Gateway.csproj
+++ b/Gateway/ChatApp.Gateway/ChatApp.Gateway.csproj
@@ -6,4 +6,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="configuration.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MMLib.SwaggerForOcelot" Version="8.3.2" />
+    <PackageReference Include="Ocelot" Version="23.3.4" />
+  </ItemGroup>
+
 </Project>
